--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "browser-image-compression": "^1.0.6",
     "core-js": "^2.6.5",
     "vue": "^2.6.10"
   },
